# solana-program-starter

./: Cargo.toml
src/: lib.rs
